--- a/plugins/remote_assist/remote_assist.yaml
+++ b/plugins/remote_assist/remote_assist.yaml
@@ -1,4 +1,4 @@
-name: montala_assist
+name: remote_assist
 desc: Adds a box below quick search showing various options for assistance.
 author: Montala Limited
 version: 1.0
