--- a/plugins/annotate/annotate.yaml
+++ b/plugins/annotate/annotate.yaml
@@ -1,6 +1,6 @@
 name    : annotate
-author  : Tom Gleason
-version : 1.01
+author  : Tom Gleason, Montala Limited
+version : 2.0
 desc    : Enables creation of jquery image annotations
 config_url: /plugins/annotate/pages/setup.php
 default_priority: 999
